--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -24,13 +24,12 @@ header nav { display: flex; align-items: center; padding: 20px 8% 20px 8%; }
 .gnbBottom img { width: 20px; margin-right: 10px;}
 .together img { width: 25px; margin-bottom: 2px;} 
 
-.userList { display: none; position: absolute; padding: 5px 8px; top: 135%; left: 27%; border-radius: 10px; background-color: #fff; box-shadow: 1px 3px 5px #a9a9a984; } 
-.userList li { padding: 9px 13px; margin: 5px 0; text-align: center; border-radius: 7px; font-size: 15px; transition: all .3s; cursor: pointer; } 
+.userList { width: 100px; display: none; position: absolute; padding: 5px 8px; top: 129%; left: 25%; border-radius: 10px; background-color: #fff; box-shadow: 1px 3px 5px #a9a9a984; } 
+.userList li { padding: 9px 13px; margin: 5px auto; text-align: center; border-radius: 7px; font-size: 15px; transition: all .3s; cursor: pointer; } 
 
-.userList li:first-child { position: relative; color: var(--color-main); width: max-content; font-family: pBold; } 
-.userList li:first-child:before { position: absolute; content: ''; top: -70%; left: 35%; width: 0; height: 0; border-style: solid; border-width: 0 13px 15px 13px; border-color: transparent transparent #fff transparent; filter: drop-shadow(0 0 1px #78787888); z-index: -10; } 
-.userList li:nth-child(2):hover,
-.userList li:nth-child(3):hover { background: #ffd43871; } 
+.userList li:first-child { position: relative; color: var(--color-main); font-family: pBold; } 
+.userList li:first-child:before { position: absolute; content: ''; top: -70%; left: 35%; width: 0; height: 0; border-style: solid; border-width: 0 12px 14px 12px; border-color: transparent transparent #fff transparent; filter: drop-shadow(0 0 1px #78787888); z-index: -10; } 
+.userList li:not(:first-child):hover { background: #ffd43871; } 
 
 /* ------- 로그인 회원가입 페이지 ---------- */
 nav .account a { padding: 5px 10px; margin-right: 5px; border-radius: 5px; font-size: 15px; transition: all .2s;}
