--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,21 @@
-section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 80px; }
+section { min-height: calc(100vh - 240px); padding: 0 12%; margin: 80px 0 100px 0; }
+section .titleTxt { position: relative; margin-top: 40px; font-size: 25px; font-family: pBold;}
+.txtPple { color: var(--color-main); }
+.epicTxt::before { content: ""; position: absolute; top: 14px; left: -4px; width: 144px; height: 15px; background: #41ff3b78; border-radius: 3px; z-index: -10;}
 
 /* ------------------ slider --------------------- */
-.slider .bn { height: 45vh; margin: 60px 0 50px 0;  }
-.bContent { width: 100%; height: 100%; display: flex; align-items: center; background-repeat: no-repeat; border-radius: 10px;}
+.slider .bn { height: 42vh; margin: 60px 0 30px 0; }
+.bContent { width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; background-repeat: no-repeat; border-radius: 10px; }
 .bContent01 { background: url(../source/bg_bangkok.jpg) center center; background-size: cover; }
 .bContent02 { background: url(../source/bg_hongK.jpg) center center; background-size: cover; }
 .bContent03 { background: url(../source/bg_korea.jpg) center center; background-size: cover; }
 .bContent04 { background: url(../source/bg_taipei.jpg) center center; background-size: cover; }
 
-.bContent p { margin-left: 200px; color: #fff; text-shadow: 1px 1px 4px #33333393; font-size: 27px; font-family: pBold; }
+.bContent p { color: #fff; text-shadow: 2px 2px 6px #1c1c1cb9; font-size: 35px; font-family: pBold; }
 
 
 /* ------------------------------------------------------ */
-.itemAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; }
+.itemAll { margin: 20px auto; padding-bottom: 30px; display: flex; border-bottom: 1px solid #ddd; }
 .itemOne { width: calc(100vw * 330 / 1920); height: 335px;  margin: calc(100vw * 20 / 1920) calc(100vw * 42 / 1920) calc(100vw * 20 / 1920) 0; position: relative; 
 border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; cursor: pointer;}
 .itemOne .post { width: 100%; height: 210px; border-radius: 15px 15px 0 0; overflow: hidden;}
@@ -29,7 +32,8 @@ overflow: hidden; text-overflow: ellipsis;}
 
 
 /* ------------------------------------------------------- */
-.schAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; } 
+.groAll { padding-bottom: 30px; border-bottom: 1px solid #ddd;}
+.groAll, .schAll { width: calc(100vw * 1480 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; } 
 
 .goDetail { width: calc(100vw * 330 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0;}
 .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
@@ -73,12 +77,18 @@ to { opacity: 1; transform: none; }
 
 
 /* ------------------------------------------------------------ */
+.schAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; }
+.schAll .schOne { width: calc(100vw * 330 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; padding-bottom: 10px; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b;}
+.schTopInfo { position: absolute; top: 5%; left: 4.5%; width: calc(100vw * 255 / 1920); padding: 12px 20px; display: flex; align-items: center;  justify-content: space-between; background: #fff; font-size: 13px; border-radius: 15px; box-shadow: 1px 1px 6px #a7a7a7; line-height: 125%; z-index: 10;}
+.schTopInfo .schUser { display: flex; align-items: center;}
+.schTopInfo .schUser img { margin-right: 10px; width: 35px; border-radius: 20px;}
+.schUser .schNicK { font-family: pSemi;}
 
 .subTxt { font-size: 12px; color: #666; font-family: pRegular;}
 
 .schDays .days { color: var(--color-main); font-family: pBold; }
 
-.schOne .schMap { width: calc(100vw * 360 / 1920); height: calc(100vw * 230 / 1920); border-radius: 15px 15px 0 0;}
+.schOne .schMap { width: calc(100vw * 330 / 1920); height: calc(100vw * 230 / 1920); border-radius: 15px 15px 0 0;}
 
 .schBottom { height: 60px; display: flex; align-items: center; justify-content: space-around; font-size: 15px;}
 .schBottom > * { width: 50%; height: 50%; text-align: center; display: flex; align-items: center; justify-content: center;}
