--- a/css/sPosting.css
+++ b/css/sPosting.css
@@ -10,7 +10,8 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 140px; }
 
 .dateSelec { margin-top: 15px; display: flex; align-items: center; } 
 .dateSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; background: #fff; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold; cursor: pointer; transition: all .25s;} 
-.dateSelec #dateClick:hover { background: #eee;}
+.dateSelec #dateClick:hover { background: #eee; }
+.dateSelec #dateClick.clicked { background: #eee; }
 
 .dateSelec .dateInput { display: flex; align-items: center; justify-content: space-around; } 
 .dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px; outline: 2px solid transparent; transition: all .2s; } 
@@ -19,7 +20,9 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 140px; }
 .dpDiv .datePick { width: 100%; font-size: 14px; font-family: pRegular; } 
 
 .saleSelec { margin-top: 15px; display: flex; align-items: center; }
-.saleSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; background: #fff; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold;}
+.saleSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; background: #fff; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold; cursor: pointer; transition: all .25s;}
+.saleSelec #dcdayBtn:hover { background: #eee; }
+.saleSelec #dcdayBtn.clicked {background: #eee; }
 
 .daySelecAll { width: 525px; display: flex; align-items: center; }
 .saleSelec input[name="saleDay"] { display: none; }
