--- a/css/sPosting.css
+++ b/css/sPosting.css
@@ -96,7 +96,7 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .infoBottom { display: flex; align-items: center; }
 .infoBottom div { margin-left: 10px; display: flex; align-items: center;}
 .infoBottom div span { margin-right: 30px; font-family: pBold; font-size: 17px;}
-.infoBottom .writer { width: 380px; height: 40px; margin-right: 150px; border-radius: 5px; border: 1px solid #ddd; background: #f8f8f8;}
+.infoBottom .writer1 { width: 380px; height: 40px; margin-right: 150px; border-radius: 5px; border: 1px solid #ddd; background: #f8f8f8; text-align: center; line-height: 40px;}
 .infoBottom input[name="price"] {  width: 420px; height: 40px; padding: 0 10px; border-radius: 5px; border: 1px solid #ddd; outline: 2px solid transparent; font-size: 15px; font-family: pRegular; transition: all .2s;}
 .infoBottom input[name="price"]:focus { border-color: transparent; outline-color: #2ce126;}
 
