--- a/css/sDetail.css
+++ b/css/sDetail.css
@@ -49,6 +49,8 @@ section .bnImg { width: 100%; }
 .cmmtUserImg { width: 50px; margin: 0 18px 0 5px; border-radius: 50%; } 
 .cmmtUserTxt span:first-child { font-family: pSemi; font-size: 17px; } 
 .cmmtUserTxt span:nth-child(2) { margin-left: 5px; font-family: pRegular; font-size: 14px; color: #999; } 
+.cmmtUserTxt .commDel { padding: 3px 8px; color: #e22309; background: #fff; font-family: pRegular; border-radius: 5px; cursor: pointer; transition: all .2s;}
+.cmmtUserTxt .commDel:hover { background: #eee; }
 .cmmtUserTxt .cmmtCon { padding: 10px 0; font-size: 15px; font-family: pLight; line-height: 120%; } 
 .cmmtDate { color: #777; font-size: 13px; font-family: pLight; }
 
