--- a/css/mypage.css
+++ b/css/mypage.css
@@ -137,10 +137,9 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; marg
 .schTopInfo .schUser img { margin-right: 10px; width: 35px; border-radius: 20px; } 
 .schUser .schNicK { font-family: pSemi; } 
 
-.subTxt { font-size: 12px; color: #666; font-family: pRegular; } 
+.schTopInfo .subTxt { font-size: 12px; color: #666; font-family: pRegular; } 
 
 .schDays .days { color: var(--color-main); font-family: pBold; } 
-
 .schOne .post { width: calc(100vw * 270 / 1920); height: calc(100vw * 180 / 1920); border-radius: 15px 15px 0 0; overflow: hidden; cursor: pointer; z-index: 3; } 
 
 .goDetail .postImg { width: calc(100vw * 270 / 1920); height: 100%; border-radius: 15px 15px 0 0; overflow: hidden; display: flex; align-items: center; position: relative; } 
@@ -166,22 +165,25 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; marg
 
 @keyframes fadeIn {from { opacity: 0; transform: translateY(15px); } 
 to { opacity: 1; transform: none; } 
- }
+}
 
 
 
 /* ---------------- 내 일정 -------------------*/
 .schAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; } 
-.schAll .schOne { width: calc(100vw * 330 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; padding-bottom: 10px; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
-
-
-.subTxt { font-size: 12px; color: #666; font-family: pRegular; } 
-
+.schAll .schOne { width: calc(100vw * 330 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
 .schDays .days { color: var(--color-main); font-family: pBold; } 
 
-.schOne .schMap { width: calc(100vw * 330 / 1920); height: calc(100vw * 230 / 1920); border-radius: 15px 15px 0 0; } 
+.schInfo { padding: 20px 25px; display: flex; align-items: flex-start; flex-direction: column; border-radius: 15px 15px 0 0; } 
+.schInfo .schUser { width: 100%; display: flex; align-items: center; margin-bottom: 10px; padding-bottom: 10px; border-bottom: 1px solid var(--color-line);} 
+.schInfo .schUser img { margin-right: 10px; width: 45px; border-radius: 40px; } 
+.schUser .schNicK { font-family: pBold; } 
 
-.schBottom { height: 60px; display: flex; align-items: center; justify-content: space-around; font-size: 15px; } 
+.schDays { padding-top: 10px; font-size: 14px;}
+.schDays span:first-child { font-size: 15px; }
+.schDays .days { color: var(--color-main); font-family: pBold; } 
+
+.schBottom { height: 60px; display: flex; align-items: center; justify-content: space-around; background: #efe6ff; font-size: 15px; border-radius: 0 0 15px 15px; } 
 .schBottom > * { width: 50%; height: 50%; text-align: center; display: flex; align-items: center; justify-content: center; } 
 .schBottom div { border-right: 1px solid var(--color-line); } 
 .schBottom .schLoc { margin-left: 5px; position: relative; } 
@@ -189,34 +191,6 @@ to { opacity: 1; transform: none; }
 
 .detailBtn { transition: all .2s; } 
 .detailBtn:hover { color: var(--color-main); } 
-
-.dayLocAll { width: 90%; margin: 0 auto; } 
-.dayAll { height: 50px; display: flex; align-items: center; overflow-y: hidden; overflow-x: scroll; } 
-.dayAll::-webkit-scrollbar { height: 10px; cursor: pointer; transition: all .2s; } 
-.dayAll::-webkit-scrollbar-thumb { background-color: #8242f024; border: 3px solid #fff; border-radius: 20px; } 
-.dayAll::-webkit-scrollbar-track { background-color: transparent; cursor: pointer; transition: all .2s; } 
-.dayAll::-webkit-scrollbar-thumb:hover { background-color: #8242f073; } 
-
-.dayAll span.day { margin: 0 8px 8px 0; padding: 8px 11px; border: 1px solid #ddd; border-radius: 20px; font-size: 14px; cursor: pointer; transition: all .2s; } 
-.dayAll span.day:hover { color: #000; background: #ddd; } 
-.dayAll .day.active { background: var(--color-main); color: #fff; border-color: transparent; } 
-.dayAll .day.active:hover { background: var(--color-main); color: #fff; border-color: transparent; } 
-
-.locList { height: 102px; overflow-y: auto; } 
-.locList::-webkit-scrollbar { width: 12px; } 
-.locList::-webkit-scrollbar-thumb { background-color: #999; border: 3px solid #fff; border-radius: 20px; } 
-.locList::-webkit-scrollbar-track { background-color: transparent; } 
-
-.locList ul { display: none; padding: 0 0 10px 10px; font-size: 15px; } 
-.locList ul.active { display: block; } 
-.locList ul li { position: relative; padding: 15px 0; padding-left: 25px; border-bottom: 1px solid #ddd; } 
-.locList ul li:last-child { border: none; } 
-.locList ul li::before { content: ''; position: absolute; width: 22px; height: 22px; top: 11px; left: -5px; background: url(../source/locGr.png) center center; background-size: cover; } 
-.noLoc { color: #666; font-size: 16px; } 
-
-
-
-
 
 /* --------- 페이지네이션 -------------- */
 .pagination { margin: 20px auto; display: flex; align-items: center; justify-content: center; } 
