--- a/css/adCalendar.css
+++ b/css/adCalendar.css
@@ -1,12 +1,69 @@
-section { min-height: calc(100vh - 240px); margin-top: 170px; margin-bottom: 120px; padding: 0 12%; } 
+section { min-height: calc(100vh - 240px); margin-top: 140px; margin-bottom: 120px; padding: 0 12%; } 
+:root {
+    --fc-small-font-size: .85em;
+    --fc-page-bg-color: #fff;
+    --fc-neutral-bg-color: rgba(208, 208, 208, 0.3);
+    --fc-neutral-text-color: #808080;
+    --fc-border-color: #ddd;
+    --fc-button-text-color: #fff;
+    --fc-button-bg-color: #999;
+    --fc-button-border-color: transparent;
+    --fc-button-hover-bg-color: var(--color-main);
+    --fc-button-hover-border-color: transparent;
+    --fc-button-active-bg-color: var(--color-main);
+    --fc-button-active-border-color: transparent;
+    --fc-event-bg-color: var(--color-main);
+    --fc-event-border-color: var(--color-main);
+    --fc-event-text-color: #fff;
+    --fc-event-selected-overlay-color: rgba(0, 0, 0, 0.25);
+    --fc-more-link-bg-color: #d0d0d0;
+    --fc-more-link-text-color: inherit;
+    --fc-event-resizer-thickness: 8px;
+    --fc-event-resizer-dot-total-width: 8px;
+    --fc-event-resizer-dot-border-width: 1px;
+    --fc-non-business-color: rgba(215, 215, 215, 0.3);
+    --fc-bg-event-color: rgb(143, 223, 130);
+    --fc-bg-event-opacity: 0.3;
+    --fc-highlight-color: rgba(188, 232, 241, 0.3);
+    --fc-today-bg-color: rgba(255, 220, 40, 0.15);
+    --fc-now-indicator-color: red;
+}
+
+.fc-toolbar-title { font-family: pBold;}
+.fc-day-sun a { color: #d1120f; text-decoration: none; } 
+.fc-day-sat a { color: #1a1ad2; text-decoration: none; }
 
 
-:root { --fc-small-font-size: .85em; --fc-page-bg-color: #fff; --fc-neutral-bg-color: rgba(208, 208, 208, 0.3); --fc-neutral-text-color: #808080; --fc-border-color: #ddd;--fc-button-text-color: #fff; --fc-button-bg-color: #2C3E50; --fc-button-border-color: #2C3E50; --fc-button-hover-bg-color: #1e2b37; --fc-button-hover-border-color: #1a252f; --fc-button-active-bg-color: #1a252f; --fc-button-active-border-color: #151e27;--fc-event-bg-color: #3788d8; --fc-event-border-color: #3788d8; --fc-event-text-color: #fff; --fc-event-selected-overlay-color: rgba(0, 0, 0, 0.25);--fc-more-link-bg-color: #d0d0d0; --fc-more-link-text-color: inherit;--fc-event-resizer-thickness: 8px; --fc-event-resizer-dot-total-width: 8px; --fc-event-resizer-dot-border-width: 1px;--fc-non-business-color: rgba(215, 215, 215, 0.3); --fc-bg-event-color: rgb(143, 223, 130); --fc-bg-event-opacity: 0.3; --fc-highlight-color: rgba(188, 232, 241, 0.3); --fc-today-bg-color: rgba(255, 220, 40, 0.15); --fc-now-indicator-color: red; } 
+/* ----------------- 모달 -------------------- */
 
+.modalBg { visibility: hidden; opacity: 0; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.599); z-index: 50; transition: all .3s ease; } 
+.modalBg.active { visibility: visible; opacity: 1; } 
+.locModal { position: relative; margin: 200px auto; padding: 60px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #1818189c; z-index: 1000; } 
+.locModal h4 { text-align: center; font-size: 24px; font-family: pSemi; } 
 
-/* 일요일 날짜 빨간색 */
-.fc-day-sun a { color: red; text-decoration: none; } 
+.schBox { margin: 30px 0 10px 0; display: flex; align-items: center; justify-content: space-between; border-radius: 10px; background: #eee; } 
+.schBox .addLocTxt { width: 90%; height: 50px; padding: 0 20px; background: transparent; font-size: 15px; font-family: pMedium; } 
+.schBox .locSchBtn { margin-right: 20px; width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; } 
 
-/* 토요일 날짜 파란색 */
-.fc-day-sat a { color: blue; text-decoration: none; } 
+.locAll { margin: 10px 0; height: 380px; overflow: auto; } 
+.locAll::-webkit-scrollbar { width: 12px; } 
+.locAll::-webkit-scrollbar-thumb { background-color: #999; border: 3px solid #fff; border-radius: 20px; } 
+.locAll::-webkit-scrollbar-track { background-color: transparent; }
+
+.locModal input[name="ds"] { display: none; } 
+
+input[name="ds"] + label { width: 100%; position: relative; display: flex; align-items: center; justify-content: center; margin: 22px 0; padding-bottom: 20px; border-bottom: 1px solid var(--color-line); cursor: pointer; } 
+input[name="ds"] + label::before { content: ""; position: absolute; width: 27px; height: 27px; top: 0; left: 15px; background: url(../source/loc.png) center center; background-size: cover; } 
+input[name="ds"] + label span { width: 79%; margin-left: 33px; font-size: 18px; font-family: pSemi; } 
+input[name="ds"] + label .check { width: 25px; height: 25px; border: 2px solid #ddd; border-radius: 7px; } 
+
+input[name="ds"]:checked + label .check { position: relative; } 
+input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; background-color: var(--color-main); border: var(--color-main); border-radius: 7px; font-size: 25px; width: 27px; height: 27px; text-align: center; position: absolute; left: -1px; top: -1px; } 
+
+.locModal .addBtn { display: block; margin: 20px auto 0 auto; padding: 8px 15px; border-radius: 10px; font-size: 16px; font-family: pMedium; cursor: pointer; transition: all .3s; } 
+.addBtn:hover { background: #ffd4389f; } 
+
+.cls { position: absolute; padding: 10px; top: 25px; right: 25px; border-radius: 8px; transition: all .3s; cursor: pointer; } 
+.cls:hover { background: #8242f024; } 
+.clsBtn { width: 17px; height: 17px; background: url(../source/closeIco.png) center center; background-size: cover; cursor: pointer; } 
 
