--- a/css/sPosting.css
+++ b/css/sPosting.css
@@ -80,9 +80,9 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .fileLabel:hover { background: #0000002b; opacity: 0.9;}
 
 .imgArea { display: flex; align-items: center; margin: 25px 0;  width: 100%; height: 460px; overflow: hidden; background: #eee; border-radius: 8px; } 
-.infoImg { justify-content: center;}
-.infoImg img { height: 100%; }
-.bgImg img { width: 100%; }
+.bgImg { justify-content: center;}
+.infoImg img { width: 100%; }
+.bgImg img { height: 100%; }
 
 .titleBox span { display: inline-block; margin: 10px 0 0 5px; color: #333; font-size: 20px; font-family: pBold;}
 .titleBox input { margin: 25px 0 20px 0; padding: 10px 15px; width: 97%; border-radius: 8px; border: 1px solid var(--color-line); outline: 2px solid transparent; font-size: 18px; font-family: pMedium; transition: all .2s; }
