--- a/css/adCalendar.css
+++ b/css/adCalendar.css
@@ -34,7 +34,6 @@ section { min-height: calc(100vh - 240px); margin-top: 140px; margin-bottom: 100
 .fc-toolbar-title { font-family: pBold; }
 
 .fc .fc-button { padding: 7px 12px; font-size: 15px; border-radius: 10px;}
-.fc .fc-button-group > .fc-button { }
 .fc-day-sun a { color: #ca0d0a; text-decoration: none; } 
 .fc-day-sat a { color: #5a1ad2; text-decoration: none; }
 
@@ -51,14 +50,14 @@ section { min-height: calc(100vh - 240px); margin-top: 140px; margin-bottom: 100
 
 .modalBg { visibility: hidden; opacity: 0; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.599); z-index: 50; transition: all .3s ease; } 
 .modalBg.active { visibility: visible; opacity: 1; } 
-.saleModel { position: relative; margin: 170px auto; padding: 40px 50px 60px 40px; width: 760px; height: 520px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #1818189c; z-index: 1000; } 
+.saleModel { position: relative; margin: 10% auto; padding: 40px 60px 60px 60px; width: 760px; height: 520px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #1818189c; z-index: 1000; } 
 .saleModel h4 { text-align: center; font-size: 24px; font-family: pBold; } 
 .saleModel h3 { margin-top: 15px; text-align: center; font-size: 17px; font-family: pRegular; } 
 
 
 .listHead { margin-top: 30px; padding: 10px 5px; background: #eee; font-size: 14px; font-family: pSemi; border-radius: 10px; }
 
-.saleListAll { margin-bottom: 10px; height: 390px; overflow: auto; } 
+.saleListAll { height: 390px; overflow: auto; } 
 .saleListAll::-webkit-scrollbar { width: 10px; } 
 .saleListAll::-webkit-scrollbar-thumb { background-color: #b2b2b2; border-radius: 20px; } 
 .saleListAll::-webkit-scrollbar-track { background-color: transparent; }
