--- a/css/sList.css
+++ b/css/sList.css
@@ -31,6 +31,6 @@ overflow: hidden; text-overflow: ellipsis;}
 .locPay p{font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; margin-top: 10px;}
 .locPay span{padding-top: 7px; font-family: pSemi; font-size: 18px;}
 
-#soldOut img { filter: grayscale(1.5);}
+#soldOut img { filter: grayscale(1.3) brightness(0.7);}
 #soldOut { color: #888;}
 #soldOut .soldOutTxt { position: absolute; width: 100%; top: 27%; color: #ffffffef; font-size: 33px; font-family: pSemi; text-align: center; text-shadow: 1px 1px 5px #000; }
