--- a/css/main.css
+++ b/css/main.css
@@ -48,18 +48,16 @@
 .locPay span { padding-top: 7px; font-family: pSemi; font-size: 18px; } 
 
 
-/* ------------------------------------------------------- */
+/* -------------------- 동행 ----------------------------------- */
 .groAll { padding-bottom: 30px; border-bottom: 1px solid #ddd; } 
 .groAll, .schAll { width: calc(100vw * 1480 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; } 
 
 .goDetail { width: calc(100vw * 330 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; } 
 .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
-.schTopInfo { position: absolute; top: 5%; left: 4.5%; width: calc(100vw * 255 / 1920); padding: 12px 20px; display: flex; align-items: center; justify-content: space-between; background: #fff; font-size: 13px; border-radius: 15px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
+.schTopInfo { position: absolute; top: 5%; left: 4.5%; width: calc(100vw * 260 / 1920); padding: calc(100vw * 12 / 1920) calc(100vw * 20 / 1920); display: flex; align-items: center; justify-content: space-between; background: #fff; font-size: 13px; border-radius: 15px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
 .schTopInfo .schUser { display: flex; align-items: center; } 
 .schTopInfo .schUser img { margin-right: 10px; width: 35px; border-radius: 20px; } 
 .schUser .schNicK { font-family: pSemi; } 
-
-.subTxt { font-size: 12px; color: #666; font-family: pRegular; } 
 
 .schDays .days { color: var(--color-main); font-family: pBold; } 
 
@@ -70,37 +68,36 @@
 .schOne:hover .post img { transform: translate(-50%, -50%) scale(1.08); } 
 .schOne:hover .postLoc { background-color: #ffda53; transition: all .3s; } 
 
-.postLoc { position: absolute; top: 26%; left: 5%; padding: 8px 18px 8px 30px; display: flex; align-items: center; justify-content: space-between; background: #fff; font-size: 13px; border-radius: 10px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
+.postLoc { position: absolute; top: 26%; left: 5%; padding: 8px calc(100vw * 18/ 1920) 8px 30px; display: flex; align-items: center; justify-content: space-between; background: #fff;font-size: calc(100vw * 13 / 1920 ); border-radius: 10px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
 .postLoc::before { position: absolute; top: 25%; left: 10%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 15px; height: 15px; } 
 
 .goDetail .postBottom { height: 70px; display: flex; flex-direction: column; width: 330px; margin: 15px auto 15px 15px; } 
 .goDetail .postBottom h3 { width: calc(100vw * 280 / 1920); font-size: 18px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } 
 .goDetail .postBottom p { width: calc(100vw * 280 / 1920); font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; overflow: hidden; display: -webkit-box; margin-top: 10px; -webkit-line-clamp: 2; -webkit-box-orient: vertical; text-overflow: ellipsis; } 
 
-.hiddenBox { display: flex; align-items: center; justify-content: space-between; position: absolute; bottom: -4px; width: 100%; height: 50px; z-index: -1; background-color: rgba(50, 50, 50, 0.7); color: #fff; padding: 20px; box-sizing: border-box; } 
+.hiddenBox { display: flex; align-items: center; justify-content: space-between; position: absolute; bottom: -4px; width: 100%;height: 50px; z-index: -1; background-color: rgba(50, 50, 50, 0.7); color: #fff; padding: calc(100vw * 20 / 1920); font-size: calc(100vw * 15 / 1920); box-sizing: border-box;} 
 
 .schOne:hover .hiddenBox { opacity: 1; animation-name: fadeIn; animation: fadeIn 0.4s ease-in-out; z-index: 10; } 
 
 .viewCnt, .chatCnt { position: relative; } 
 .viewCnt { margin-right: 30px; } 
 
-.hiddenBox .viewCnt::before { content: ""; top: 0; left: -25px; width: 20px; height: 20px; background: url(../source/cG_view.png) center center; position: absolute; } 
-.hiddenBox .chatCnt::before { content: ""; top: 0; left: -25px; width: 20px; height: 20px; background: url(../source/cG_send.png) center center; position: absolute; } 
+.hiddenBox .viewCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_view.png) center center; position: absolute; } 
+.hiddenBox .chatCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_send.png) center center; position: absolute; } 
 
 @keyframes fadeIn {from { opacity: 0; transform: translateY(15px); } 
 to { opacity: 1; transform: none; } 
  }
 
 
-/* ------------------------------------------------------------ */
+/* ------------------------- 일정 ----------------------------------- */
 .schAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; } 
 .schAll .schOne { width: calc(100vw * 330 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; padding-bottom: 10px; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
-.schTopInfo { position: absolute; top: 5%; left: 4.5%; width: calc(100vw * 255 / 1920); padding: 12px 20px; display: flex; align-items: center; justify-content: space-between; background: #fff; font-size: 13px; border-radius: 15px; box-shadow: 1px 1px 6px #a7a7a7; line-height: 125%; z-index: 10; } 
 .schTopInfo .schUser { display: flex; align-items: center; } 
 .schTopInfo .schUser img { margin-right: 10px; width: 35px; border-radius: 20px; } 
 .schUser .schNicK { font-family: pSemi; } 
 
-.subTxt { font-size: 12px; color: #666; font-family: pRegular; } 
+.subTxt { font-size: calc(100vw * 12 / 1920); color: #666; font-family: pRegular; } 
 
 .schDays .days { color: var(--color-main); font-family: pBold; } 
 
@@ -128,7 +125,7 @@ to { opacity: 1; transform: none; }
 .dayAll .day.active:hover { background: var(--color-main); color: #fff; border-color: transparent; } 
 
 .locList { height: 102px; overflow-y: auto; } 
-.locList::-webkit-scrollbar { width: 12px; } 
+.locList::-webkit-scrollbar { width: calc(100vw * 12 / 1920); } 
 .locList::-webkit-scrollbar-thumb { background-color: #999; border: 3px solid #fff; border-radius: 20px; } 
 .locList::-webkit-scrollbar-track { background-color: transparent; } 
 
@@ -140,7 +137,7 @@ to { opacity: 1; transform: none; }
 .noLoc { color: #666; font-size: 16px; } 
 
 /* ---------- scrollTop ------------- */
-#scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 50px; height: 50px; border-radius: 50%; text-align: center; font-size: calc(100vw * 12 / 1920); bottom: calc(100vw * 50 / 1920); right: calc(100vw * 80 / 1920); position: fixed; z-index: 3; cursor: pointer; } 
+#scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: calc(100vw * 53 / 1920); height: calc(100vw * 53 / 1920); border-radius: 50%; text-align: center; font-size: calc(100vw * 12 / 1920); bottom: calc(100vw * 50 / 1920); right: calc(100vw * 80 / 1920); position: fixed; z-index: 3; cursor: pointer; } 
 #scrollTop:hover { transition: 0.5s ease; background-color: #efefef; } 
 #scrollTop::before { content: "\2303"; position: absolute; top: calc(100vw * 7 / 1920); left: calc(100vw * 17 / 1920); color: #171717; font-family: pLight; font-size: calc(100vw * 23 / 1920); } 
 #scrollTop .topTxt { display: block; margin-top: calc(100vw * 23 / 1920); font-size: calc(100vw * 14 / 1920); } 
